# mytardis_ingestion_rocrate

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  Untitled 1.ods  __init__.py  archive_test.py  example_.env   gpg_demo_commands  main.py  pyproject.toml  ro_create_notes.py  test.csv  test.txt  test_sheet.xls  test_sheet.xlsx
.github/workflows/: mytardis_ingestion.yml  pull_request.yml
JSON templates/: experiment.json  project.json
JSON templates/Test/: experiment.json
ProjectDB/: __init__.py  get_ro_metadata.py  projectdb_api.py
constants/: __init__.py  organisatons.py
docs/: Sensitivity and Security.md
examples_for_test/abi_test/project/: project.json
examples_for_test/abi_test/project/sample/Ganglia561/: Ganglia561.json
examples_for_test/abi_test/project/sample/Ganglia562/: Ganglia562.json
examples_for_test/abi_test/project/sample/sample/Ganglia561/mytest/: test.json
examples_for_test/print_lab_test/: .~lock.sampledata.xlsx#  sampledata.xlsx
examples_for_test/print_lab_test/BAM/: aligned.sam
examples_for_test/print_lab_test/BAM/qc/: idx_stats.txt  samtools.flagstats.txt
examples_for_test/print_lab_test/SAM/: do_not_transfer.sam
examples_for_test/templates/abi/: dataset.json
examples_for_test/templates/printlab/: sampledata.xlsx
json_parser/: abi_json_parser.py
ro_crate_abi_music/: .bandit  main.py
ro_crate_abi_music/src/: main.py
ro_crate_abi_music/src/constants/: organisatons.py
ro_crate_abi_music/src/json_parser/: __init__.py  abi_json_parser.py
ro_crate_abi_music/src/rocrate_builder/: rocrate_builder.py  rocrate_tar.py
ro_crate_abi_music/src/rocrate_dataclasses/: rocrate_dataclasses.py
ro_crate_abi_music/src/user_lookup/: user_lookup.py
ro_crate_abi_music/tests/: conftest.py  test_json_parser.py  test_rocrate_builder.py
rocrate_builder/: rocrate_builder.py
src/: user_handler.py
src/cli/: main.py  mytardisconfig.py
src/encryption/: encrypt_metadata.py
src/ingestion_targets/abi_music/: abi_json_parser.py  consts.py  crate_and_tar.sh  crate_builder.py  crate_extractor.py  filesystem_nodes.py
src/ingestion_targets/abi_music/scripts/: crate_and_tar.sh
src/ingestion_targets/print_lab_genomics/: ICD11API.py  ICD11_API_agent.py  __init__.py  consts.py  extractor.py  input_schema.json  metadata_schema.json  print_crate_builder.py  print_crate_dataclasses.py
src/metadata_extraction/: metadata_extraction.py
src/mt_api/: api_consts.py  apiconfigs.py  mt_consts.py
src/print_data_parser/: samplecsv_parser.py
src/profiles/: extractor.py  profile_base.py  profile_loader.py  profile_register.py
src/profiles/abi_music/: abi_json_parser.py  consts.py  crate_builder.py  extractor.py  profile.py
src/profiles/print_lab_genomics/: consts.py  extractor.py  profile.py  ro_builder.py
src/rocrate_builder/: rocrate_builder.py
src/rocrate_dataclasses/: rocrate_dataclasses.py
src/user_lookup/: user_lookup.py
src/utils/: file_utils.py  log_utils.py
test_rocrate/: ro-crate-metadata.json
test_rocrate/Ganglia561/: Ganglia561.json
tests/: conftest.py  test_apis.py  test_cli.py  test_metadata_extraction.py  test_print_lab_builder.py  test_print_lab_extractor.py
tests/examples_for_test/abi_test/: dataset.json
tests/examples_for_test/print_lab_test/: .~lock.sampledata.xlsx#  sampledata.xlsx
tests/examples_for_test/print_lab_test/BAM/qc/: samtools.stats.txt
user_lookup/: __init__.py  user_lookup.py
