[tool.poetry]
name = "MyTarids_ROCrate"
version = "0.1.0"
description = "Scripts to pack data files into an RO-crate for MyTardis ingestion"
authors = ["James Love <james.love@auckland.ac.nz>", "Chris Seal <c.seal@auckland.ac.nz>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12.4"
passpy = "^1.0.2"
ldap3 = "^2.9.1"
python-gnupg = "^0.5.1"
python-slugify = "^8.0.1"
pytest-icdiff = "^0.8"
pytest-deadfixtures = "^2.2.1"
bagit = "^1.8.1"
pylint = "^3.1.0"
mypy = "^1.8.0"
pytest = "^8.0.2"
slugify = "^0.0.1"
typer = "^0.9.0"
logging = "^0.4.9.6"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
pydantic = "^2.6.3"
backoff = "^2.2.1"
requests = "^2.31.0"
build = "^1.1.1"
pydantic-settings = "^2.2.1"
mytardis-rocrate-builder = {git = "https://github.com/JLoveUOA/mytardis_rocrate_builder", branch="optional-identifiers"}
ro-crate-py = {git = "https://github.com/UoA-eResearch/ro-crate-py.git",  branch = "move-encrypted-into-graph"}
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-mypy = "^17.8.0"
flake8-isort = "^6.1.0"
flake8-black = "^0.3.6"
coverage = {extras = ["toml"], version = "^7.3.1"}
toml = "^0.10.2"
types-python-slugify = "^8.0.0.3"

[tool.isort]
profile = "black"

[tool.mypy]
files = [
       "**/*.py"
	  ]
ignore_missing_imports = true
exclude = [
       "^tests/.*$",
       "^docs/.*$",
       "^hackday-ro-crate/.*$"
       ]
strict = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.bandit.assert_used]
skips = ["tests/*", "test_*.py"]


[tool.coverage.run]
omit = [
     "tests/*",
     "docs/*",
     "src/specific_implementations/*",
     "src/helpers/*"
     ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ro_crate_builder = "src.cli.main:cli"